# Imx8M4Core

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
SDK_2_14_0_EVK-MIMX8MM/: EVK-MIMX8MM_manifest_v3_13.xml  SW-Content-Register.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/demo_apps/hello_world/: hello_world_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/demo_apps/low_power_wakeword/: low_power_wakeword_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/demo_apps/sai_low_power_audio/: readme.txt  sai_low_power_audio_v3_13.xml
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/driver_examples/pwm/: ipwm_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/driver_examples/rdc/: rdc_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/driver_examples/wdog/: readme.txt  wdog01_v3_13.xml
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/freertos_examples/freertos_event/: freertos_event_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/freertos_examples/freertos_generic/: freertos_generic_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/freertos_examples/freertos_hello/: freertos_hello_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/boards/evkmimx8mm/freertos_examples/freertos_mutex/: freertos_mutex_v3_13.xml  readme.txt
SDK_2_14_0_EVK-MIMX8MM/devices/MIMX8MM6/: all_lib_device.cmake  device_MIMX8MM6_startup.MIMX8MM6.cmake
SDK_2_14_0_EVK-MIMX8MM/devices/MIMX8MM6/utilities/: utility_assert.MIMX8MM6.cmake
SDK_2_14_0_EVK-MIMX8MM/docs/MCUXpresso SDK API Reference Manual_MIMX8MM6/: a00006.html  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00016.html  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00021.html  a00021.js  a00022.html  a00022.js  a00023.html  a00023.js  a00024.html  a00024.js  a00025.html  a00025.js  a00026.html  a00026.js  a00027.html  a00027.js  a00028.html  a00028.js  (+89 more)
SDK_2_14_0_EVK-MIMX8MM/docs/MCUXpresso SDK API Reference Manual_MIMX8MM6/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  classes_5f.js  classes_61.js  classes_63.js  classes_65.js  classes_73.js  classes_74.js  classes_75.js  classes_77.js  enums_65.js  enums_73.js  enumvalues_6b.js  functions_65.js  functions_6d.js  functions_70.js  functions_73.js  typedefs_65.js  typedefs_73.js  variables_62.js  variables_64.js  variables_66.js  variables_69.js  variables_6d.js  (+3 more)
SDK_2_14_0_EVK-MIMX8MM/middleware/voice_seeker/: middleware_voice_seeker_cm4.cmake
SDK_2_14_0_EVK-MIMX8MM/middleware/voice_spot/: middleware_voice_spot_cm4_iMX8MM.cmake
cmake/: build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
source/: imx8corem4.c
src/: imx8corem4.c  pulse_generator.c  pulse_generator.h
(+105 files in other folders)
